--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -37,7 +37,7 @@
   --color-border-hover: var(--vt-c-divider-light-1);
 
   --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-text: var(--black);
 
   --section-gap: 160px;
 }
